# ENN

./: COMPREHENSIVE_ENHANCEMENTS_SUMMARY.md  README.md  ROBUSTNESS_SUMMARY.md  demo_comprehensive_benchmark.py  enhanced_training_demo.py  enn_training_metrics.json  fast_benchmark_demo.py  main.py  pyproject.toml  quick_revolutionary_demo.py  quick_revolutionary_test.py  real_bicep_demo.py  report.html  revolutionary_benchmarks.py  revolutionary_bicep_benchmark.py  run_comprehensive_benchmark.py  test_attention_integration.py  test_revolutionary_integration.py  train_synthetic.py
baselines/: baseline_models.py
benchmark_results/regression/: benchmark_results.csv  summary_report.txt
benchmarking/: benchmark_framework.py
enhanced_checkpoints/: enn_checkpoint_epoch_100.pt  enn_checkpoint_epoch_114.pt  enn_checkpoint_epoch_20.pt  enn_checkpoint_epoch_40.pt  enn_checkpoint_epoch_60.pt  enn_checkpoint_epoch_80.pt  latest.json
enn/: attention.py  config.py  core.py  enhanced_utils.py  event_processing.py  initialization.py  layers.py  memory.py  model.py  multihead_attention.py  sparsity_control.py  training.py  training_optimization.py  utils.py
training/: sequence_copy_profiler.py  sequence_memory_training.py  xor_time_training.py
