[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "enn"
version = "0.0.1"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0",
    # pulls a tagged commit of BICEP at install time
    "bicep @ git+https://github.com/rochmanofenna/BICEP.git@v0.1.0"
]

[tool.setuptools]
# ── tell setuptools *where* to look
package-dir = {"" = "."}

[tool.setuptools.packages.find]
# ── and *what* to include
include = ["enn*", "training*"]          # everything under enn/ …
exclude = ["training*", "tb_logs*"]  # …but skip these helpers



